added lesson-17 (second model)

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -20,7 +20,7 @@
       <main class="page">
          <div class="first-model">
             <div class="first-model__container">
-               <h2 class="first-model__title first-model__title--section">Ours
+               <h2 class="first-model__title title title--section">Ours
                   popular products</h2>
                <p class="first-model__text">Best Seller Product This Week!</p>
                <div class="first-model__list">
@@ -89,6 +89,87 @@
                <div class="first-model__decor"></div>
             </div>
          </div>
+
+         <div class="second-model">
+            <div class="second-model__container">
+               <h2 class="second-model__title title title--section">
+                  Most Popular Product
+               </h2>
+               <p class="second-model__text">
+                  Best Seller Product This Week!
+               </p>
+               <div class="second-model__list">
+                  <div class="second-model__column">
+                     <div class="second-model__item">
+                        <a class="second-model__img-link" href="#">
+                           <img class="second-model__img"
+                              src="img/popular-products-second-model/circlet-1.webp"
+                              alt="circlet"></a>
+                        <h3 class="second-model__card-title">
+                           <a class="second-model__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
+                        <p class="second-model__price">
+                           &#36;144.00
+                        </p>
+                     </div>
+                  </div>
+                  <div class="second-model__column">
+                     <div class="second-model__item">
+                        <a class="second-model__img-link" href="#">
+                           <img class="second-model__img"
+                              src="img/popular-products-second-model/circlet-2.webp"
+                              alt="circlet">
+                        </a>
+                        <h3 class="second-model__card-title">
+                           <a class="second-model__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
+                        <p class="second-model__price">
+                           &#36;144.00
+                        </p>
+                     </div>
+                  </div>
+                  <div class="second-model__column">
+                     <div class="second-model__item">
+                        <a class="second-model__img-link" href="#">
+                           <img class="second-model__img"
+                              src="img/popular-products-second-model/earrings-1.webp"
+                              alt="earrings">
+                        </a>
+                        <h3 class="second-model__card-title">
+                           <a class="second-model__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
+                        <p class="second-model__price">
+                           &#36;144.00
+                        </p>
+                     </div>
+                  </div>
+                  <div class="second-model__column">
+                     <div class="second-model__item">
+                        <a class="second-model__img-link" href="#">
+                           <img class="second-model__img"
+                              src="img/popular-products-second-model/circlet-3.webp"
+                              alt="circlet">
+                        </a>
+                        <h3 class="second-model__card-title">
+                           <a class="second-model__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
+                        <p class="second-model__price">
+                           &#36;144.00
+                        </p>
+                     </div>
+                  </div>
+               </div>
+               <a class="second-model__more-link" href="#">View More</a>
+            </div>
+         </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
@@ -96,7 +177,6 @@
          </div>
       </footer>
    </div>
-   <script type="module" src="js/marginBottom.js"></script>
 </body>
 
 </html>
