added third model

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -20,9 +20,11 @@
       <main class="page">
          <div class="first-model">
             <div class="first-model__container">
-               <h2 class="first-model__title title title--section">Ours
+               <div class="first-model__decor"></div>
+               <h2 class="first-model__title title title-section">Ours
                   popular products</h2>
-               <p class="first-model__text">Best Seller Product This Week!</p>
+               <p class="first-model__text">Best Seller Product This Week!
+               </p>
                <div class="first-model__list">
                   <div class="first-model__column">
                      <div class="first-model__item">
@@ -38,7 +40,9 @@
                            allows you to portray an
                            advertisement in the form of a story, which can</p>
                         <a class="first-model__link" href="#">
-                           <span class="first-model__text-link">Read more</span>
+                           <span
+                              class="first-model__text first-model__text-link">Read
+                              more</span>
                            <img src="img/popular-product/arrow-right.svg"
                               alt="arrow right">
                         </a>
@@ -58,7 +62,9 @@
                            allows you to portray an
                            advertisement in the form of a story, which can</p>
                         <a class="first-model__link" href="#">
-                           <span class="first-model__text-link">Read more</span>
+                           <span
+                              class="first-model__text first-model__text-link">Read
+                              more</span>
                            <img src="img/popular-product/arrow-right.svg"
                               alt="arrow right">
                         </a>
@@ -79,95 +85,169 @@
                            allows you to portray an
                            advertisement in the form of a story, which can</p>
                         <a class="first-model__link" href="#">
-                           <span class="first-model__text-link">Read more</span>
+                           <span
+                              class="first-model__text first-model__text-link">Read
+                              more</span>
                            <img src="img/popular-product/arrow-right.svg"
                               alt="arrow right">
                         </a>
                      </div>
                   </div>
                </div>
-               <div class="first-model__decor"></div>
             </div>
          </div>
 
          <div class="second-model">
             <div class="second-model__container">
-               <h2 class="second-model__title title title--section">
+               <h2 class="second-model__title title title-section ">
                   Most Popular Product
                </h2>
-               <p class="second-model__text">
+               <p class="second-model__text text">
                   Best Seller Product This Week!
                </p>
-               <div class="second-model__list">
-                  <div class="second-model__column">
-                     <div class="second-model__item">
-                        <a class="second-model__img-link" href="#">
-                           <img class="second-model__img"
+               <div class="second-model__list producs-list">
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link" href="#">
+                           <img class="producs-list__img"
                               src="img/popular-products-second-model/circlet-1.webp"
                               alt="circlet"></a>
-                        <h3 class="second-model__card-title">
-                           <a class="second-model__title-link" href="#">
+                        <h3 class="producs-list__title">
+                           <a class="producs-list__title-link" href="#">
                               Embossed hoop earrings
                            </a>
                         </h3>
-                        <p class="second-model__price">
+                        <p class="producs-list__text">
                            &#36;144.00
                         </p>
                      </div>
                   </div>
-                  <div class="second-model__column">
-                     <div class="second-model__item">
-                        <a class="second-model__img-link" href="#">
-                           <img class="second-model__img"
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link" href="#">
+                           <img class="producs-list__img"
                               src="img/popular-products-second-model/circlet-2.webp"
                               alt="circlet">
                         </a>
-                        <h3 class="second-model__card-title">
-                           <a class="second-model__title-link" href="#">
+                        <h3 class="producs-list__title">
+                           <a class="producs-list__title-link" href="#">
                               Embossed hoop earrings
                            </a>
                         </h3>
-                        <p class="second-model__price">
+                        <p class="producs-list__text">
                            &#36;144.00
                         </p>
                      </div>
                   </div>
-                  <div class="second-model__column">
-                     <div class="second-model__item">
-                        <a class="second-model__img-link" href="#">
-                           <img class="second-model__img"
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link" href="#">
+                           <img class="producs-list__img"
                               src="img/popular-products-second-model/earrings-1.webp"
                               alt="earrings">
                         </a>
-                        <h3 class="second-model__card-title">
-                           <a class="second-model__title-link" href="#">
+                        <h3 class="producs-list__title">
+                           <a class="producs-list__title-link" href="#">
                               Embossed hoop earrings
                            </a>
                         </h3>
-                        <p class="second-model__price">
+                        <p class="producs-list__text">
                            &#36;144.00
                         </p>
                      </div>
                   </div>
-                  <div class="second-model__column">
-                     <div class="second-model__item">
-                        <a class="second-model__img-link" href="#">
-                           <img class="second-model__img"
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link" href="#">
+                           <img class="producs-list__img"
                               src="img/popular-products-second-model/circlet-3.webp"
                               alt="circlet">
                         </a>
-                        <h3 class="second-model__card-title">
-                           <a class="second-model__title-link" href="#">
+                        <h3 class="producs-list__title">
+                           <a class="producs-list__title-link" href="#">
                               Embossed hoop earrings
                            </a>
                         </h3>
-                        <p class="second-model__price">
+                        <p class="producs-list__text">
                            &#36;144.00
                         </p>
                      </div>
                   </div>
                </div>
                <a class="second-model__more-link" href="#">View More</a>
+            </div>
+         </div>
+
+         <div class="third-model">
+            <div class="third-model__container">
+               <h2 class="third-model__section-title title title-section">Ours
+                  Popular Products</h2>
+               <p class="third-model__text">Best Seller Product This Week!
+               </p>
+               <div class="third-model__list producs-list">
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link  producs-list__img-link--b-radius"
+                           href="#">
+                           <img class="producs-list__img"
+                              src="img/third-model/earrings-1.webp"
+                              alt="earrings">
+                        </a>
+                        <h3 class="producs-list__title">
+                           Embossed hoop earrings</h3>
+                        <p class="producs-list__text">
+                           $144.00
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link  producs-list__img-link--b-radius"
+                           href="#">
+                           <img class="producs-list__img"
+                              src="img/third-model/earrings-2.webp"
+                              alt="earrings">
+                        </a>
+                        <h3 class="producs-list__title">
+                           Embossed hoop earrings</h3>
+                        <p class="producs-list__text">
+                           $144.00
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link  producs-list__img-link--b-radius"
+                           href="#">
+                           <img class="producs-list__img"
+                              src="img/third-model/rings.webp" alt="rings">
+                        </a>
+                        <h3 class="producs-list__title">
+                           Embossed hoop earrings</h3>
+                        <p class="producs-list__text">
+                           $144.00
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="producs-list__column">
+                     <div class="producs-list__item">
+                        <a class="producs-list__img-link  producs-list__img-link--b-radius"
+                           href="#">
+                           <img class="producs-list__img"
+                              src="img/third-model/earrings-3.webp"
+                              alt="earrings">
+                        </a>
+                        <h3 class="producs-list__title">
+                           Embossed hoop earrings</h3>
+                        <p class="producs-list__text">
+                           $144.00
+                        </p>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
       </main>
