--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -33,7 +33,8 @@
                            alt="women">
                         <h3 class="first-model__title first-model__title--item">
                            Engagement Rings – a
-                           Buyer&#39;s Guide</h3>
+                           Buyer&#39;s Guide
+                        </h3>
                         <p class="first-model__text first-model__text--item">
                            Video marketing is a
                            powerful marketing strategy that
@@ -42,7 +43,7 @@
                         <a class="first-model__link" href="#">
                            <span
                               class="first-model__text first-model__text-link">Read
-                              more</span>
+                              more </span>
                            <img src="img/popular-product/arrow-right.svg"
                               alt="arrow right">
                         </a>
@@ -194,7 +195,10 @@
                               alt="earrings">
                         </a>
                         <h3 class="producs-list__title">
-                           Embossed hoop earrings</h3>
+                           <a class="producs-list__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
                         <p class="producs-list__text">
                            $144.00
                         </p>
@@ -210,7 +214,10 @@
                               alt="earrings">
                         </a>
                         <h3 class="producs-list__title">
-                           Embossed hoop earrings</h3>
+                           <a class="producs-list__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
                         <p class="producs-list__text">
                            $144.00
                         </p>
@@ -225,7 +232,10 @@
                               src="img/third-model/rings.webp" alt="rings">
                         </a>
                         <h3 class="producs-list__title">
-                           Embossed hoop earrings</h3>
+                           <a class="producs-list__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
                         <p class="producs-list__text">
                            $144.00
                         </p>
@@ -241,7 +251,10 @@
                               alt="earrings">
                         </a>
                         <h3 class="producs-list__title">
-                           Embossed hoop earrings</h3>
+                           <a class="producs-list__title-link" href="#">
+                              Embossed hoop earrings
+                           </a>
+                        </h3>
                         <p class="producs-list__text">
                            $144.00
                         </p>
@@ -249,6 +262,93 @@
                   </div>
                </div>
             </div>
+         </div>
+
+         <div class="fourth-model">
+
+            <div class="fourth-model__left-path">
+               <div class="fourth-model__content">
+                  <div class="fourth-model__text-wrapper">
+                     <h2 class="fourth-model__section-title">Why Choose Me</h2>
+                     <h3 class="fourth-model__sub-title">
+                        We Provide Solutions To Grow Your Business
+                     </h3>
+                     <p class="fourth-model__text">
+                        Leverage agile frameworks to provide a robust synopsis
+                        for
+                        high level overviews. Thinking to further the overall
+                        proposition.
+                     </p>
+                  </div>
+                  <div class="fourth-model__list cards">
+                     <div class="cards__column">
+                        <div class="cards__item">
+                           <div class="cards__block-percentage">
+                              <img src="img/fourth-model/client.svg" alt="95%">
+                           </div>
+                           <div class="cards__info-block">
+                              <h4 class="cards__title">Clients</h4>
+                              <p class="cards__text">Quick Response</p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="cards__column">
+                        <div class="cards__item">
+                           <div class="cards__block-percentage">
+                              <img src="img/fourth-model/project.svg" alt="85%">
+                           </div>
+                           <div class="cards__info-block">
+                              <h4 class="cards__title">Project</h4>
+                              <p class="cards__text">Finished Jobs</p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="fourth-model__statistics statistics">
+                     <div class="statistics__column">
+                        <div class="statistics__item">
+                           <p class="statistics__text">
+                              <span class="statistics__number">
+                                 2,800+
+                              </span>
+                              Active clients
+                           </p>
+                        </div>
+                     </div>
+                     <div class="statistics__column">
+                        <div class="statistics__item">
+                           <p class="statistics__text">
+                              <span class="statistics__number">
+                                 106+
+                              </span>
+                           </p>
+                        </div>
+                     </div>
+                     <div class="statistics__column">
+                        <div class="statistics__item">
+                           <p class="statistics__text">
+                              <span class="statistics__number">
+                                 1,670+
+                              </span>
+                              <span class="statistics__accent">
+                                 5
+                                 <img class="statistics__img"
+                                    src="img/fourth-model/star.svg" alt="star">
+                                 stars
+                              </span>
+                              reviews
+                           </p>
+                        </div>
+                     </div>
+                     <div class="statistics__column">
+                        <div class="statistics__item">
+                           <a class="statistics__link" href="#">Get in Touch</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="fourth-model__right-path"></div>
          </div>
       </main>
       <footer class="footer">
