--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -267,7 +267,7 @@
          <div class="fourth-model">
 
             <div class="fourth-model__left-path">
-               <div class="fourth-model__content">
+               <div class="fourth-model__container">
                   <div class="fourth-model__text-wrapper">
                      <h2 class="fourth-model__section-title">Why Choose Me</h2>
                      <h3 class="fourth-model__sub-title">
