lesson-17 - added decor

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -181,6 +181,7 @@
 
          <div class="third-model">
             <div class="third-model__container">
+               <div class="third-model__decor"></div>
                <h2 class="third-model__section-title title title-section">Ours
                   Popular Products</h2>
                <p class="third-model__text">Best Seller Product This Week!
@@ -261,11 +262,11 @@
                      </div>
                   </div>
                </div>
+
             </div>
          </div>
 
          <div class="fourth-model">
-
             <div class="fourth-model__left-path">
                <div class="fourth-model__container">
                   <div class="fourth-model__text-wrapper">
