fix lessons 7 and 8

--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -1488,9 +1488,9 @@
                   thinking to further the overal.
                </p>
             </div>
-             <ul>
-               <li class="first">
-                  <a href="#">
+            <ul class="projects__list">
+               <li class="first projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Financial Investment</h3>
@@ -1498,8 +1498,8 @@
                      </div>
                   </a>
                </li>
-               <li class="second">
-                  <a href="#">
+               <li class="second projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Marketing Strategy</h3>
@@ -1507,8 +1507,8 @@
                      </div>
                   </a>
                </li>
-               <li class="third">
-                  <a href="#">
+               <li class="third projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Business Consulting</h3>
@@ -1518,8 +1518,8 @@
                </li>
             </ul>
             <ul>
-               <li class="fourth">
-                  <a href="#">
+               <li class="fourth projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Financial Investment</h3>
@@ -1527,8 +1527,8 @@
                      </div>
                   </a>
                </li>
-               <li class="fifth">
-                  <a href="#">
+               <li class="fifth projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Web Development</h3>
@@ -1536,8 +1536,8 @@
                      </div>
                   </a>
                </li>
-               <li class="sixth">
-                  <a href="#">
+               <li class="sixth projects__item">
+                  <a class="projects__link" href="#">
                      <div class="bg-wrapper"></div>
                      <div class="text-content">
                         <h3>Financial Investment</h3>
