--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -16,10 +16,10 @@
             <h1 class="header__title">Ford Mustang</h1>
          </div>
       </header>
-      <main class="page page--mb">
-         <div class="section section--mb">
+      <main class="page">
+         <div class="section">
             <div class="section__container">
-               <div class="section__car  car">
+               <div class="section__car car">
                   <div class="car__upper-path upper-path">
                      <div class="upper-path__body">
                         <div class="upper-path__bottom-to-top-front">
@@ -39,105 +39,137 @@
                   </div>
                   <div class="car__lower-path lower-path">
                      <div class="lower-path__body">
-                        <div class="lower-part__first"></div>
-                        <div class="lower-part__second"></div>
-                        <div class="lower-part__third"></div>
+                        <div class="lower-path__front"></div>
+                        <div class="lower-path__center"></div>
+                        <div class="lower-path__back"></div>
                      </div>
                      <div class="lower-path__decor decor">
                         <div class="decor__start">
-                           <div></div>
+                           <div class="decor__headlight  headlight">
+                              <div class="headlight__bg"></div>
+                              <div class="headlight__bulb"></div>
+                           </div>
+                           <div class="decor__bumper-path"></div>
+                           <div class="black-triangle"></div>
+                           <div class="small-lamp small-lamp--start"></div>
+
                         </div>
                         <div class="decor__center">
-                           <div></div>
-                           <div class="decor__end"></div>
-                        </div>
-                        <div class="lower-path__wheels wheels">
-                           <div class="wheels__block  wheels__block--front">
-                              <div class="wheels__bg"></div>
-                              <div class="wheels__tyre"></div>
-                              <div class="wheels__circle"></div>
-                              <div class="wheels__lines-block">
-                                 <div class="line line--1"></div>
-                                 <div class="line line--2"></div>
-                                 <div class="line line--3"></div>
-                                 <div class="line line--4"></div>
-                                 <div class="line line--5"></div>
-                                 <div class="line line--6"></div>
-                                 <div class="line line--7"></div>
-                                 <div class="line line--8"></div>
-                                 <div class="line line--9"></div>
-                                 <div class="line line--10"></div>
-                                 <div class="line line--11"></div>
-                                 <div class="line line--12"></div>
-                                 <div class="line line--13"></div>
-                                 <div class="line line--14"></div>
-                                 <div class="line line--15"></div>
-                                 <div class="line line--16"></div>
-                                 <div class="line line--17"></div>
-                                 <div class="line line--18"></div>
-                                 <div class="line line--19"></div>
-                                 <div class="line line--20"></div>
+                           <div class="decor__wrapper-applique-center">
+                              <div
+                                 class="decor__applique-center applique-center">
+                                 <div
+                                    class="applique-center__first-transparent-block">
+                                    <div class="applique-center__dark-block">
+                                       <div
+                                          class="applique-center__second-transparent-block">
+                                          <div
+                                             class="applique-center__third-transparent-block">
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <span
+                                    class="applique-center__text applique-center__text--dark">BOSS</span>
+                                 <span
+                                    class="applique-center__text applique-center__text--yellow">203</span>
                               </div>
-                              <div class="wheels__small-circle">
-                                 <span class="name name--size">Fedorova
-                                    Nataliya</span>
-                              </div>
-                              <div class="wheels__wrapper"></div>
                            </div>
-                           <div class=" wheels__block wheels__block--rear">
-                              <div class="wheels__bg"></div>
-                              <div class="wheels__tyre"></div>
-                              <div class="wheels__circle"></div>
-                              <div class="wheels__lines-block">
-                                 <div class="line line--1"></div>
-                                 <div class="line line--2"></div>
-                                 <div class="line line--3"></div>
-                                 <div class="line line--4"></div>
-                                 <div class="line line--5"></div>
-                                 <div class="line line--6"></div>
-                                 <div class="line line--7"></div>
-                                 <div class="line line--8"></div>
-                                 <div class="line line--9"></div>
-                                 <div class="line line--10"></div>
-                                 <div class="line line--11"></div>
-                                 <div class="line line--12"></div>
-                                 <div class="line line--13"></div>
-                                 <div class="line line--14"></div>
-                                 <div class="line line--15"></div>
-                                 <div class="line line--16"></div>
-                                 <div class="line line--17"></div>
-                                 <div class="line line--18"></div>
-                                 <div class="line line--19"></div>
-                                 <div class="line line--20"></div>
-                              </div>
-                              <div class="wheels__small-circle">
-                                 <span class="name name--size">Fedorova
-                                    Nataliya</span>
-                              </div>
-                              <div class="wheels__wrapper"></div>
+                           <div class="decor__shadow"></div>
+                        </div>
+                        <div class="decor__end">
+                           <div class="small-lamp small-lamp--end"></div>
+                           <div class="silver-triangle"></div>
+                        </div>
+                     </div>
+                     <div class="lower-path__wheels wheels">
+                        <div class="wheels__block  wheels__block--front">
+                           <div class="wheels__bg"></div>
+                           <div class="wheels__tyre"></div>
+                           <div class="wheels__circle"></div>
+                           <div class="wheels__lines-block">
+                              <div class="line line--1"></div>
+                              <div class="line line--2"></div>
+                              <div class="line line--3"></div>
+                              <div class="line line--4"></div>
+                              <div class="line line--5"></div>
+                              <div class="line line--6"></div>
+                              <div class="line line--7"></div>
+                              <div class="line line--8"></div>
+                              <div class="line line--9"></div>
+                              <div class="line line--10"></div>
+                              <div class="line line--11"></div>
+                              <div class="line line--12"></div>
+                              <div class="line line--13"></div>
+                              <div class="line line--14"></div>
+                              <div class="line line--15"></div>
+                              <div class="line line--16"></div>
+                              <div class="line line--17"></div>
+                              <div class="line line--18"></div>
+                              <div class="line line--19"></div>
+                              <div class="line line--20"></div>
                            </div>
+                           <div class="wheels__small-circle">
+                              <span class="name name--size">Fedorova
+                                 Nataliya</span>
+                           </div>
+                           <div class="wheels__wrapper"></div>
                         </div>
-
-                     </div>
-                     <div class="car__door">
-                        <div class="car__handle"></div>
-                     </div>
-                     <div class="car__side-window side-window">
-                        <div class="side-window__back back">
-                           <div class="back__left"></div>
-                        </div>
-                        <div class="side-window__front front">
-                           <div class="front__bg"></div>
-                           <div class="front__top-line"></div>
-                           <div class="front__bottom-line"></div>
-                        </div>
-                        <div class="car__side-mirror side-mirror">
+                        <div class=" wheels__block wheels__block--rear">
+                           <div class="wheels__bg"></div>
+                           <div class="wheels__tyre"></div>
+                           <div class="wheels__circle"></div>
+                           <div class="wheels__lines-block">
+                              <div class="line line--1"></div>
+                              <div class="line line--2"></div>
+                              <div class="line line--3"></div>
+                              <div class="line line--4"></div>
+                              <div class="line line--5"></div>
+                              <div class="line line--6"></div>
+                              <div class="line line--7"></div>
+                              <div class="line line--8"></div>
+                              <div class="line line--9"></div>
+                              <div class="line line--10"></div>
+                              <div class="line line--11"></div>
+                              <div class="line line--12"></div>
+                              <div class="line line--13"></div>
+                              <div class="line line--14"></div>
+                              <div class="line line--15"></div>
+                              <div class="line line--16"></div>
+                              <div class="line line--17"></div>
+                              <div class="line line--18"></div>
+                              <div class="line line--19"></div>
+                              <div class="line line--20"></div>
+                           </div>
+                           <div class="wheels__small-circle">
+                              <span class="name name--size">Fedorova
+                                 Nataliya</span>
+                           </div>
+                           <div class="wheels__wrapper"></div>
                         </div>
                      </div>
 
                   </div>
+                  <div class="car__door">
+                     <div class="car__handle"></div>
+                  </div>
+                  <div class="car__side-window side-window">
+                     <div class="side-window__back back">
+                        <div class="back__left"></div>
+                     </div>
+                     <div class="side-window__front front">
+                        <div class="front__bg"></div>
+                        <div class="front__top-line"></div>
+                        <div class="front__bottom-line"></div>
+                     </div>
+                     <div class="car__side-mirror side-mirror">
+                     </div>
+                  </div>
+
                </div>
+
             </div>
+         </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
