--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -39,12 +39,15 @@
                   </div>
                   <div class="car__lower-path lower-path">
                      <div class="lower-path__body">
+                        <div class="lower-path__exhaust"></div>
                         <div class="lower-path__front"></div>
-                        <div class="lower-path__center"></div>
-                        <div class="lower-path__back"></div>
+                        <div class="lower-path__center-back">
+                        </div>
                      </div>
                      <div class="lower-path__decor decor">
+
                         <div class="decor__start">
+                           <div class="decor__outline"></div>
                            <div class="decor__headlight  headlight">
                               <div class="headlight__bg"></div>
                               <div class="headlight__bulb"></div>
@@ -75,7 +78,9 @@
                                     class="applique-center__text applique-center__text--yellow">203</span>
                               </div>
                            </div>
-                           <div class="decor__shadow"></div>
+                           <div class="decor__shadow-start-center"></div>
+                           <div class="decor__gradient"></div>
+                           <div class="decor__shadow-center"></div>
                         </div>
                         <div class="decor__end">
                            <div class="small-lamp small-lamp--end"></div>
