--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -39,13 +39,15 @@
                   </div>
                   <div class="car__lower-path lower-path">
                      <div class="lower-path__body">
+                        <div class="lower-path__hood hood">
+                           <div class="hood__decor"></div>
+                        </div>
                         <div class="lower-path__exhaust"></div>
                         <div class="lower-path__front"></div>
                         <div class="lower-path__center-back">
                         </div>
                      </div>
                      <div class="lower-path__decor decor">
-
                         <div class="decor__start">
                            <div class="decor__outline"></div>
                            <div class="decor__headlight  headlight">
@@ -55,7 +57,6 @@
                            <div class="decor__bumper-path"></div>
                            <div class="black-triangle"></div>
                            <div class="small-lamp small-lamp--start"></div>
-
                         </div>
                         <div class="decor__center">
                            <div class="decor__wrapper-applique-center">
