--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -11,11 +11,11 @@
 
 <body class="body">
    <div class="wrapper">
-      <header class="header header--mb">
+      <!-- <header class="header header--mb">
          <div class="header__container">
             <h1 class="header__title">Ford Mustang</h1>
          </div>
-      </header>
+      </header> -->
       <main class="page">
          <div class="section">
             <div class="section__container">
@@ -46,6 +46,7 @@
                         <div class="lower-path__front"></div>
                         <div class="lower-path__center-back">
                         </div>
+
                      </div>
                      <div class="lower-path__decor decor">
                         <div class="decor__start">
@@ -154,7 +155,6 @@
                            <div class="wheels__wrapper"></div>
                         </div>
                      </div>
-
                   </div>
                   <div class="car__door">
                      <div class="car__handle"></div>
@@ -173,7 +173,31 @@
                   </div>
 
                </div>
-
+               <div class="section__indicator indicator">
+                  <div class="indicator__list">
+                     <div class="indicator__item">
+                        <span>Body</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Window</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Door</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Wheels</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Light</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Applique</span>
+                     </div>
+                     <div class="indicator__item">
+                        <span>Neon</span>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
       </main>
